# pyo3-dlpack

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  test.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: dlpack.rs
benchmarks/: bench_dlpack.py  interop_probe.py
docs/superpowers/plans/: 2026-05-29-versioned-dlpack.md
docs/superpowers/specs/: 2026-05-29-versioned-dlpack-design.md
examples/: README.md  basic_usage.rs  demo.py
src/: export.rs  ffi.rs  lib.rs  managed.rs
tests/: README.md  competitor_smoke.rs  conftest.py  integration.rs  test.sh  test_dlpack_integration.py
tests/python_helpers/: Cargo.toml
tests/python_helpers/src/: lib.rs
