[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "dlpack_test_module"
version = "0.1.0"
description = "Test module for pyo3-dlpack DLPack integration"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "torch>=2.0",
    "numpy>=1.20",
]

[tool.maturin]
manifest-path = "tests/python_helpers/Cargo.toml"
module-name = "dlpack_test_module"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
